--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,10 @@ android {
         targetSdk 32
         versionCode 1
         versionName "1.0"
-
+        ndk {
+            // Filter for architectures supported by Flutter.
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86_64'
+        }
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -20,6 +23,9 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
+        profile {
+            initWith debug
         }
     }
     compileOptions {
@@ -34,6 +40,16 @@ android {
     }
 }
 
+//String storageUrl = System.env.FLUTTER_STORAGE_BASE_URL ?: "https://storage.googleapis.com"
+//repositories {
+//    maven {
+//        url '/Users/01042937/flutter_projects/fs_flutter_module/build/host/outputs/repo'
+//    }
+//    maven {
+//        url "$storageUrl/download.flutter.io"
+//    }
+//}
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -47,4 +63,8 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    debugImplementation 'com.example.fs_flutter_module:flutter_debug:1.0'
+    profileImplementation 'com.example.fs_flutter_module:flutter_profile:1.0'
+    releaseImplementation 'com.example.fs_flutter_module:flutter_release:1.0'
 }
